# shortest-word-path

./: Cargo.toml  words_syt_utf8.csv
dict/: Cargo.toml
dict-lib/: Cargo.toml  build.rs
dict-lib/src/: dict.proto  dict.rs  index.rs  inout.rs  lib.rs  neighbours.rs  proto.rs
dict/src/: dict.rs  index.rs  lib.rs  neighbours.rs
shortest-word-path/: Cargo.toml  dict.txt
shortest-word-path/src/: lib.rs  main.rs
src/: main.rs
