[workspace]
members = [
    "shortest-word-path",
    "dict",
    "dict-lib"
]

[profile.release-lto]
inherits = "release"
lto = true

[workspace.dependencies]
clap = { version = "4", features = [ "derive" ] }
roaring = "0.10"
prost = "0.11"
prost-build = "0.11"
zstd = "0.12"
anyhow = "1"
itertools = "0.10"
log = { version = "0.4", features = [ "std" ] }
simple_logger = "4"
